oop_mro/tests/trybuild/fail_virtual_incompatible_override.stderr
error: method `speak` does not satisfy the virtual signature declared in `Animal`
  --> tests/trybuild/fail_virtual_incompatible_override.rs:12:20
   |
12 |         virtual fn speak(&self) -> usize {
   |                    ^^^^^
